Traefik/cheese.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: stilton
  labels:
    app: cheese
    cheese: stilton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cheese
      task: stilton
  template:
    metadata:
      labels:
        app: cheese
        task: stilton
        version: v0.0.1
    spec:
      # hostNetwork: true
      containers:
      - name: cheese
        image: errm/cheese:stilton
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/hostname: "pub-xs"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheeses
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: rudenspavasaris.id.lv
    http:
      paths:
      - path: /stilton
        backend:
          serviceName: stilton
          servicePort: http
---
apiVersion: v1
kind: Service
metadata:
  name: stilton
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: cheese
    task: stilton
